<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>trxbewi_scan</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="lionel.orcil@iobewi.com">ORCIL Lionel</maintainer>
  <license>MIT</license>

  <buildtool_depend> ament_cmake_auto</buildtool_depend>

  <exec_depend>rplidar_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>